--- a/asd.css
+++ b/asd.css
@@ -1,3 +1,5 @@
+
+
 body{
     margin: 0;
     padding: 0;
@@ -102,6 +104,18 @@ img:hover{
 
 }
 
+.nibbi-img{
+    height: 300px; 
+    width: 400px; 
+    margin-top:1%
+}
+
+.nibbi-text{
+    font-size: 2rem;
+    font-family: 'Permanent Marker', cursive; 
+    color: #ffffff;
+}
+
 @keyframes animate{
     from{
         transform: rotateY(-360deg);
@@ -109,5 +123,63 @@ img:hover{
 
     to{
         transform: rotateY(0deg);
+    }
+}
+
+@media (max-width: 700px){
+    .bday{
+        padding-top: 30%;
+        font-size: 3rem;
+    }
+
+    .name{
+        font-size: 4rem;
+    }
+
+    .single-img img{
+        width: 150px;
+        height: 100px;
+        border: 5px solid #ffffff;
+        border-radius: 10px;
+    }
+
+    .wrapper{
+       padding-top: 20%;
+    }
+    
+
+
+    .single-img.img-one{
+        transform: rotateY(0deg) translateZ(160px);
+    }
+    
+    .single-img.img-two{
+        transform: rotateY(60deg) translateZ(160px);
+    }
+    
+    .single-img.img-three{
+        transform: rotateY(120deg) translateZ(160px);
+    }
+    
+    .single-img.img-four{
+        transform: rotateY(180deg) translateZ(160px);
+    }
+    
+    .single-img.img-five{
+        transform: rotateY(240deg) translateZ(160px);
+    }
+    
+    .single-img.img-six{
+        transform: rotateY(300deg) translateZ(160px);
+    }
+
+
+    .nibbi-img{
+        height: 250px;
+        width: 300px;
+    }
+
+    .nibbi-text{
+        font-size: 1rem;
     }
 }
